[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest"
version = "0.1.0"
description = "Build a team of knights to go and slay the king!"
license = {text = "BSD-3-Clause"}
authors = [{name = "Neil Vaytet"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    'python_version>=3.8',
    'numpy>="1.24"',
    'pyyaml>="6.0"'
]
[tool.setuptools.packages.find]
where = ["./src"]

[project.options.extras_require]
notebook = [
    'jupyter>="1.0.0"', 
    'ipyturtle3>="0.1.4"'
]

[tool.flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = "E203"

[tool.yapf]
based_on_style = "pep8"
column_limit = 88
