[metadata]
name = quest
author = Neil Vaytet (https://github.com/nvaytet)
description = Build a team of knights to go and slay the king!
license = BSD
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
classifiers =
    Development Status :: 3 - Alpha,
    Topic :: Games/Entertainment :: Turn Based Strategy,
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pyyaml
python_requires = >=3.8
include_package_data = True

[options.extras_require]
nb = ipyturtle3

[options.packages.find]
where = src


[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
